Update phone number

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
      <!------------------------- contact us----------------------------->   
      <section class="cta"> 
         <h4>Contact us to see if we can help you <br> move in to your dream home</h4>
-       <a  href="tel:0151-545-1553" class="hero-btn3">Call us</a>
+       <a  href="tel:01515451553" class="hero-btn3">Call us</a>
    </section>
 
     <script src="app.js"></script>
