Update background photo in service

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/78f024a9fb.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css" integrity="sha384-z4tVnCr80ZcL0iufVdGQSUzNvJsKjEtqYZjiQrrYKlpGow+btDHDfQWkFjoaz/Zr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -38,7 +37,7 @@
         <div class="text-box">
             <h2>Independent Mortgage Advisors</h2>
             <p>Independent whole of market mortgage advisors committed to <br> finding you the right mortgage</p>
-            <a href="" class="hero-btn">GET IN TOUCH</a>
+            <a href="contact.html" class="hero-button">GET IN TOUCH</a>
         </div>
     </section>
  <!-------------------     OUR SERVICES               ------------------->
@@ -48,15 +47,15 @@
             <p>Independent whole of market mortgage advisors committed to  finding you the right mortgage</p>
     
             <div class="row">
-                <div class="service-row">
+                <div class="service-row first">
                     <h3>First Time Buyer</h3>
                     <p>From fining your <br>mortgage to ensuring the<br> process is smooth. We pride <br> ourselves on our service.</p>
                 </div>
-                <div class="service-row">
+                <div class="service-row self">
                     <h3>Self Employed</h3>
                     <p>We can find complex <br> mortgage deals and make<br>  sure that you lend the <br> maximum amount available<br>  to you.</p>
                 </div>
-                <div class="service-row">
+                <div class="service-row remor">
                     <h3>Remortgages</h3>
                     <p>Finding the best new deal<br>  can be stressful, so let us do it<br>  for you.</p>
                 </div>
@@ -95,7 +94,7 @@
                     <h3>Hollie Phillips</h3>
                   </div>
                   <div class="reviews-col">
-                    <p>Rhys at Root Mortgages has been amazing - we’re first time buyers and after speaking to a few other mortgages advisors found the whole process rather daunting and confusing but then we found Rhys and he took all our worries away immediately! He explained everything - from our best options  to processes and paperwork. He recommended our Solicitor and Surveyor - contacting them on our behalf and helped us with our paperwork.</p>
+                    <p>Rhys at Root Mortgages has been amazing - we are first time buyers and after speaking to a few other mortgages advisors found the whole process rather daunting and confusing but then we found Rhys and he took all our worries away immediately! He explained everything - from our best options  to processes and paperwork. He recommended our Solicitor and Surveyor - contacting them on our behalf and helped us with our paperwork.</p>
                     <h3>Louise Oldrid</h3>
                   </div>
                   <div class="reviews-col">
@@ -112,7 +111,7 @@
         </section>
      <!------------------------- contact us----------------------------->   
      <section class="cta"> 
-        <h4>Contact us to see if we can help you <br> move in to your dream home</h4>
+        <h4 class="test">Contact us to see if we can help you <br> move in to your dream home</h4>
        <a  href="tel:01515451553" class="hero-btn3">Call us</a>
    </section>
 
