Change colors and fonts size

--- a/index.html
+++ b/index.html
@@ -91,27 +91,44 @@
                 <div class="row">
                   <div class="reviews-col">
                     <p>I highly recommend Rhys at Root mortgages he is professional and nothing is too much trouble. Has a first time buyer and been completely new to this Rhys helped to put my mind at ease throughout the process. Rhys has been brilliant...</p>
-                    <h3>Hollie Phillips</h3>
+                    <h3>Hollie Phillips</h3> <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <div class="reviews-col">
                     <p>Rhys at Root Mortgages has been amazing - we are first time buyers and after speaking to a few other mortgages advisors found the whole process rather daunting and confusing but then we found Rhys and he took all our worries away immediately! He explained everything - from our best options  to processes and paperwork. He recommended our Solicitor and Surveyor - contacting them on our behalf and helped us with our paperwork.</p>
-                    <h3>Louise Oldrid</h3>
+                    <h3>Louise Oldrid</h3> <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <div class="reviews-col">
                     <p>Getting a mortgage with Root Mortgage Services has been easy and pain free. Rhys who dealt with my mortgage was very good. He's very responsive attentive to our needs. Me and my partner highly recommend. …</p>
-                    <h3>Alexander Robert Fitch</h3>
+                    <h3>Alexander Robert Fitch</h3> <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <div class="reviews-col">
                     <p>I am a first time buyer and found Root services on Google with positive reviews and decided to use them to get my mortgage.
                         Kieran has been amazing throughout the process. He explained everything clearly, </p>
-                    <h3>Ladidi Abutu</h3>
+                    <h3>Ladidi Abutu</h3> <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                 </div>
                 <a href="https://www.google.com/search?q=root+mortgage+services&sxsrf=ALiCzsYn8fq8rjVjKiHo6a96cvb9Z8zyoQ%3A1666274263831&source=hp&ei=11NRY-TKL4ncgAamoaCQCg&iflsig=AJiK0e8AAAAAY1Fh51Sa0QeJres6E9UB5UGuJzVKF-fA&gs_ssp=eJzj4tVP1zc0LCrPyDIrMMoyYLRSNagwsTBPMrJMTUs0SDI0TU1OszKoMLNMNU0zNbU0SzIzNDA3sPASK8rPL1HIzS8qSU9MT1UoTi0qy0xOLQYAfwgYFg&oq=root&gs_lcp=Cgdnd3Mtd2l6EAEYADIMCC4QxwEQrwEQJxATMgUIABCABDIFCAAQgAQyBQguEIAEMggILhCABBDUAjIFCAAQgAQyBQgAEIAEMgUIABCABDIFCC4QgAQyBQgAEIAEOgcIIxDqAhAnOgQIIxAnOgsILhCABBDHARDRAzoICAAQgAQQyQNQugpY2A5gkR9oAXAAeACAAaEBiAGABJIBAzAuNJgBAKABAbABCg&sclient=gws-wiz#lrd=0x487b29efa0b15ecf:0x69e5f5596b610708,1,,," class="hero-btn2">SEE OUR GOOGLE REVIEWS</a>
         </section>
      <!------------------------- contact us----------------------------->   
      <section class="cta"> 
-        <h4 class="test">Contact us to see if we can help you <br> move in to your dream home</h4>
+        <h1>Contact us to see if we can help you <br> move in to your dream home</h1>
+        
        <a  href="tel:01515451553" class="hero-btn3">Call us</a>
    </section>
 
