Update contact cta

--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
 
      <!------------------------- contact us----------------------------->   
      <section class="cta"> 
-        <h4 class="test">Contact us to see if we can help you <br> move in to your dream home</h4>
+        <h1>Contact us to see if we can help you <br> move in to your dream home</h1>
        <a  href="tel:01515451553" class="hero-btn3">Call us</a>
    </section>
 
