Update Kieran's changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/78f024a9fb.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -67,7 +67,7 @@
         <section class="team">
             <h2>Meet the team</h2>
             <p>
-                Our advisors hav years of experiance in mortgages & protection advice and have a very refreshing approach to mortgages.
+                Our advisors have years of experiance in mortgages & protection advice and have a very refreshing approach to mortgages.
             </p>
             <div class="row">
                 <div class="team-col">
