--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div class="nav-menu" > 
                 
                 <ul>
-                    <li class="nav-item"><a href="" class="nav-link">NEWS</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">MORTGAGES</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">PROTECTION</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">TESTIMONIALS</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">PROMOTIONS</a></li>
+                    <li class="nav-item"><a href="news.html" class="nav-link">NEWS</a></li>
+                    <li class="nav-item"><a href="mortgages.html" class="nav-link">MORTGAGES</a></li>
+                    <li class="nav-item"><a href="protection.html" class="nav-link">PROTECTION</a></li>
+                    <li class="nav-item"><a href="testimonials.html" class="nav-link">TESTIMONIALS</a></li>
+                    <li class="nav-item"><a href="promotions.html" class="nav-link">PROMOTIONS</a></li>
                 </ul>
             </div>
             <div class="hamburger">
