Update news page

--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-------------------        HEADER              ------------------->
-    <section class="header">
+    <section class="header-news">
         <nav class="navbar">
             <a href="index.html"><img src="images/logo2.png"></a>
             <h1>Root Mortgages Services</h1>
@@ -34,13 +34,69 @@
                 <span class="bar"></span>
             </div>
         </nav>
-        <div class="text-box">
-            <h2>Independent Mortgage Advisors</h2>
-            <p>Independent whole of market mortgage advisors committed to <br> finding you the right mortgage</p>
-            <a href="contact.html" class="hero-button">GET IN TOUCH</a>
-        </div>
+        <h2>News</h2>
     </section>
+    <!---------------------------NEWS  ------------------------>
+    <div class="container">
+        <h1 class="heading-1">Root Mortgages</h1>
+        <div class="sub-heading-news">
+            <p>Saturday, <span>November 12, 2022</span></p>
+            <p class="important">your right to know</p>
+        </div>
+   
+    <div class="main">
+        <div class="home">
+            <div class="left">
+                <img src="images/news.jpg" class="home-img" >
+                <h2 class="heading-2">The standard Lorem Ipsum passage, used since the 1500s </h2>
+        </div>
+        <div class="right">
+            <h3 class="heading-3">Latest news</h3>
+            <div class="lists">
+                <div class="list">
+                    <img src="images/first home.jpg" >
+                    <p>The standard Lorem Ipsum passage, used since the 1500s!!!!</p>
+                </div>
+                <div class="list">
+                    <img src="images/first home.jpg" >
+                    <p>The standard Lorem Ipsum passage, used since the 1500s!!!!</p>
+                </div>
+                <div class="list">
+                    <img src="images/first home.jpg" >
+                    <p>The standard Lorem Ipsum passage, used since the 1500s!!!!</p>
+                </div>
+                <div class="list">
+                    <img src="images/first home.jpg" >
+                    <p>The standard Lorem Ipsum passage, used since the 1500s!!!!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi aspernatur at eaque quisquam odio quis unde, sit eius est quasi culpa possimus? Reiciendis, nulla impedit, omnis fugit perspiciatis eum debitis, nisi doloremque unde expedita blanditiis error itaque non quod. Nesciunt itaque eveniet aspernatur architecto obcaecati iure maxime! Optio voluptate, repellat cumque accusamus quaerat vitae beatae quasi accusantium, voluptas impedit dignissimos fugit ipsa veniam nobis doloremque corporis quia quod amet earum ea. Nam quisquam accusantium placeat ea maiores doloribus neque quidem laborum nemo? Quis ratione possimus officia reprehenderit facere, suscipit culpa impedit laborum nam earum magnam doloribus dicta, corporis qui!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis dolores animi, quod delectus, ducimus molestiae perspiciatis commodi asperiores, praesentium sit dignissimos vel quibusdam temporibus soluta. Vel iste excepturi nemo, rem nam exercitationem architecto ducimus maiores aliquam natus blanditiis, nobis, corrupti velit. Eos aperiam sed eaque. Velit, sunt? Architecto, sit nisi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur aliquam tempore aliquid veritatis iure quo vero et, ducimus, qui obcaecati accusantium culpa ullam non atque quasi eius maxime. Molestias, vero! Excepturi cum rerum, nihil veniam exercitationem sit corrupti vel delectus deserunt! Quia nulla, eos hic laudantium architecto est quam velit autem corrupti numquam voluptatibus corporis, iure odit, magnam libero cupiditate similique animi reprehenderit assumenda doloribus commodi nemo? Delectus sunt dicta doloribus est aliquam accusamus ipsum, perspiciatis cum omnis molestias? Dolorem fugiat unde iste facilis repudiandae! Quaerat nobis voluptatum est ipsum laudantium, aliquam quidem, rerum autem excepturi aperiam ex repellat vero officia ad ea, architecto laboriosam distinctio. Reprehenderit, dolorem facilis. Quas, natus nihil quibusdam nostrum debitis consectetur porro dignissimos, praesentium necessitatibus officiis aliquid ducimus maxime est ipsum aut tenetur eum! Dolorem hic cumque ipsa excepturi repudiandae voluptas velit iusto sit, inventore voluptatem, eligendi numquam iure placeat eaque debitis iste accusamus eius.</p>
+    </article>
+    </div>
+    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam libero expedita eveniet architecto? Culpa suscipit explicabo minima consequuntur nam beatae nihil sed totam saepe! Velit error facere pariatur harum ullam deserunt, quod quas assumenda soluta sunt rem. Laboriosam praesentium necessitatibus placeat aut culpa quia iusto doloremque quidem accusamus explicabo, natus quae officia numquam earum libero voluptatem, dolorum tempora suscipit deserunt soluta facilis. Modi facere est exercitationem animi! Neque, eaque sed!</blockquote>
+    <div class="cards">
+        <div class="card">
+            <h4 class="heading-4">Title</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam quae pariatur commodi, nihil aliquid facere velit architecto ab sint dolores magnam nam. Velit laboriosam, magni corrupti voluptate illo officiis non dolore optio assumenda sapiente eaque, quod asperiores veniam est, culpa alias beatae quam minus eum reprehenderit? A, dicta voluptate.</p>
+        </div>
 
+        <div class="card">
+            <h4 class="heading-4">Title</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo atque rem omnis, dolore corrupti voluptate eveniet? Consequatur laborum rerum inventore temporibus ipsam dignissimos sed aliquam, culpa minus veritatis itaque delectus!</p>
+        </div>
+
+        <div class="card">
+            <h4 class="heading-4">Title</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam quae pariatur commodi, nihil aliquid facere velit architecto ab sint dolores magnam nam. Velit laboriosam, magni corrupti voluptate illo officiis non dolore optio assumenda sapiente eaque, quod asperiores veniam est, culpa alias beatae quam minus eum reprehenderit? A, dicta voluptate.</p>
+        </div>
+    </div>
+
+</div>
      <!------------------------- contact us----------------------------->   
      <section class="cta"> 
         <h1>Contact us to see if we can help you <br> move in to your dream home</h1>
