--- a/protection.html
+++ b/protection.html
@@ -46,7 +46,7 @@
                 <h2> Critical Illness</h2>
                  <p>If you are diagnosed with a critical illness, it can have a severe impact on your finances as you may need to take time off work for your treatment and recovery. Critical illness insurance is designed to help, paying out a lump sum payment when you are diagnosed with one of the specific critical illnesses covered by your policy.</p>
             </div>
-            <img src="images/logo2.png">
+            <img src="images/illnes.jpg">
         </div>
         
     </section>
@@ -70,7 +70,7 @@
                      <p>Buildings insurance covers the cost of repairing damage to the structure of your property. This includes the walls, windows and roof as well as permanent fixtures and fittings such as baths, toilets and fitted kitchens. As a general rule, buildings insurance covers the cost of rebuilding your house from the ground up. It is likely to differ from the market value of your home and often includes the cost of services like demolition, site clearance and architects’ fees.  
                      Depending on the type of policy you choose, you may also be covered for structures around your home like garages, outside walls and driveways. Homeowners often combine this with contents insurance, which protects their belongings from loss, theft or damage.</p>
                 </div>
-                <img src="images/logo2.png" >
+                <img src="images/home.png">
         </div>
     </section>
     <section class="protect-row">
